--- a/src/components/sections/AboutUs.astro
+++ b/src/components/sections/AboutUs.astro
@@ -26,8 +26,8 @@ import Title from "../shared/Title.astro";
             <Paragraph className="mt-8">
                 Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minus, saepe aliquid autem alias vero distinctio dignissimos consequatur? Excepturi quibusdam, quam ipsum hic, laudantium ducimus suscipit, culpa facere consequuntur repellat delectus.
             </Paragraph>
-            <div class="pt-8 grid grid-cols-2 items-center gap-4 max-w-3xl md:max-w-[none]">
-                <Info description="At Prosthetix, our goal is geared towards the safe and efficient distribution of prosthetic limbs at a reasonable cost to those in need. Namely, we wish to assist those affected by the earthquakes that have hit Turkey, Syria, and the regions surrounding the respective countries. We hope that all people, no matter the race, creed, or gender identity, are entitled to cheap and accessible prosthetic limbs if needed." title="Mission">
+            <span class="pt-8 grid grid-cols-2 items-center gap-4 max-w-3xl md:max-w-[none]">
+                <Info description="At Prosthetix, our goal is geared towards the safe and efficient distribution of prosthetic limbs at a reasonable cost to those in need. Namely, we wish to assist those affected by the earthquakes that have hit Turkey, Syria, and the regions surrounding the respective countries." title="Mission">
                     <span slot="icon">
                         <svg xmlns="http://www.w3.org/2000/svg" width="30" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-4 h-4 sm:w-5 sm:h-5">
                             <path stroke-linecap="round" stroke-linejoin="round" d="M3.75 13.5l10.5-11.25L12 10.5h8.25L9.75 21.75 12 13.5H3.75z" />
@@ -42,7 +42,7 @@ import Title from "../shared/Title.astro";
                         </svg>
                     </span>
                 </Info>
-            </div>
+            </span>
         </div>
     </Container>
 </section>
