--- a/src/components/sections/AboutUs.astro
+++ b/src/components/sections/AboutUs.astro
@@ -27,13 +27,18 @@ import Title from "../shared/Title.astro";
                 Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minus, saepe aliquid autem alias vero distinctio dignissimos consequatur? Excepturi quibusdam, quam ipsum hic, laudantium ducimus suscipit, culpa facere consequuntur repellat delectus.
             </Paragraph>
             <span class="pt-8 grid grid-cols-2 items-center gap-4 max-w-3xl md:max-w-[none]">
-                <Info description="At Prosthetix, our goal is geared towards the safe and efficient distribution of prosthetic limbs at a reasonable cost to those in need.\n\n Namely, we wish to assist those affected by the earthquakes that have hit Turkey, Syria, and the regions surrounding the respective countries." title="Mission">
-                    <span slot="icon">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="30" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-4 h-4 sm:w-5 sm:h-5">
-                            <path stroke-linecap="round" stroke-linejoin="round" d="M3.75 13.5l10.5-11.25L12 10.5h8.25L9.75 21.75 12 13.5H3.75z" />
-                        </svg>                              
-                    </span>
-                </Info>
+                <div>
+                    <Info description="At Prosthetix, our goal is geared towards the safe and efficient distribution of prosthetic limbs at a reasonable cost to those in need." title="Mission">
+                        <span slot="icon">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="30" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-4 h-4 sm:w-5 sm:h-5">
+                                <path stroke-linecap="round" stroke-linejoin="round" d="M3.75 13.5l10.5-11.25L12 10.5h8.25L9.75 21.75 12 13.5H3.75z" />
+                            </svg>                              
+                        </span>
+                    </Info>
+                    <Info description = "Namely, we wish to assist those affected by the earthquakes that have hit Turkey, Syria, and the regions surrounding the respective countries.">
+                    </Info>    
+                </div>
+                
                 <Info description="Lorem ipsum dolor sit amet consectetur" title="Vision">
                     <span slot="icon">
                         <svg xmlns="http://www.w3.org/2000/svg" width="30" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-4 h-4 sm:w-5 sm:h-5">
