--- a/src/components/sections/AboutUs.astro
+++ b/src/components/sections/AboutUs.astro
@@ -24,7 +24,7 @@ import Title from "../shared/Title.astro";
                 Our Mission
             </Title>
             <Paragraph className="mt-8">
-                At Prosthetix, our goal is geared towards the safe and efficient distribution of prosthetic limbs at a reasonable cost to those in need. amely, we wish to assist those affected by the earthquakes that have hit Turkey, Syria, and the regions surrounding the respective countries.
+                At Prosthetix, our goal is geared towards the safe and efficient distribution of prosthetic limbs at a reasonable cost to those in need. Namely, we wish to assist those affected by the earthquakes that have hit Turkey, Syria, and the regions surrounding the respective countries.
             </Paragraph>
 
         </div>
