updated 'our mission' & vision section

--- a/src/components/sections/AboutUs.astro
+++ b/src/components/sections/AboutUs.astro
@@ -24,7 +24,10 @@ import Title from "../shared/Title.astro";
                 Our Mission
             </Title>
             <Paragraph className="mt-8">
-                At Prosthetix, our goal is geared towards the safe and efficient distribution of prosthetic limbs at a reasonable cost to those in need. Namely, we wish to assist those affected by the earthquakes that have hit Turkey, Syria, and the regions surrounding the respective countries.
+                Help those who require prosthesis but cannot afford them.
+                Inspired to supply lower-cost prosthetic limbs to those impacted by the earthquakes in Turkey and Syria <br><br>
+                Objective : to find the point where an arm that is comparable to an actual limb may be produced for less money than currently accessible options.
+                To decrease the stigmas and allow youth to participate in these crucial life-changing aspects of technology
             </Paragraph>
 
         </div>
