--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,11 +8,9 @@ import CTA from '../components/sections/CTA.astro';
 import Brands from '../components/sections/Brands.astro';
 ---
 
-<Layout title="Welcome to Prosthetix">
+<Layout title="Saving Lives">
 	<main class="flex flex-col gap-y-20 md:gap-y-32 overflow-hidden">
 		<Hero/>
-		<Brands/>
-		<Services/>
 		<AboutUs/>
 		<Features/>
 		<CTA/>
