--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,6 +11,7 @@ import Brands from '../components/sections/Brands.astro';
 <Layout title="Saving Lives">
 	<main class="flex flex-col gap-y-20 md:gap-y-32 overflow-hidden">
 		<Hero/>
+		<Services/>
 		<AboutUs/>
 		<Features/>
 		<CTA/>
