added team members info

--- a/src/components/elements/Navbar.astro
+++ b/src/components/elements/Navbar.astro
@@ -5,20 +5,20 @@ import  Navitem from "../shared/Navitem.astro";
 
 const navItems = [
     {
-        href:"#",
+        href:"/",
         text:"Home"
     },
     {
         href:"#services",
-        text:"Services"
+        text:"Team"
     },
     {
         href:"#about-us",
-        text:"About us"
+        text:"Mission"
     },
     {
         href:"#features",
-        text:"Features"
+        text:"Impact"
     },
 ]
 ---
