--- a/src/components/elements/Footer.astro
+++ b/src/components/elements/Footer.astro
@@ -121,11 +121,11 @@ const footerLegal = [
                             <span class="absolute w-2 h-2 rounded-full bg-heading-1 top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2"></span>
                         </div>
                         <div class="inline-flex text-lg font-semibold text-heading-1">
-                            AgenceX
+                            Prosthetix
                         </div>
                     </a>
                     <Paragraph className={"mt-8"}>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae, maiores nam doloribus id magni
+                        We provide prosthesis to those who cannot afford them
                     </Paragraph>
                 </div>
 
