--- a/src/components/elements/Footer.astro
+++ b/src/components/elements/Footer.astro
@@ -125,7 +125,7 @@ const footerLegal = [
                         </div>
                     </a>
                     <Paragraph className={"mt-8"}>
-                        We provide prosthesis to those who cannot afford them
+                        We provide prosthetics to those who cannot afford them
                     </Paragraph>
                 </div>
         </div>
