--- a/src/components/sections/Hero.astro
+++ b/src/components/sections/Hero.astro
@@ -1,7 +1,6 @@
 ---
 import Button from "../shared/Button.astro";
 import Container from "../shared/Container.astro";
-import ByNumber from "./ByNumber.astro";
 ---
 
 <section class="relative pt-32 lg:pt-36">
@@ -16,7 +15,7 @@ import ByNumber from "./ByNumber.astro";
             
             <h1 class="text-3xl/tight sm:text-4xl/tight md:text-5xl/tight xl:text-6xl/tight
              font-bold text-heading-1">
-             We provide <span class="text-transparent bg-clip-text bg-gradient-to-br from-indigo-600 from-20% via-primary via-30% to-green-600">prosthesis</span> to those who cannot afford them
+             We provide <span class="text-transparent bg-clip-text bg-gradient-to-br from-indigo-600 from-20% via-primary via-30% to-green-600">prosthetics</span> to those who cannot afford them
             </h1>
             <div class="mt-10  w-full flex max-w-md mx-auto lg:mx-0">
                 <div class="flex sm:flex-row flex-col gap-5 w-full">
@@ -47,6 +46,4 @@ import ByNumber from "./ByNumber.astro";
             <img src="/images/prosthetix.jpg" alt="Hero image" width="1000" height="1000" class="lg:absolute lg:w-full lg:h-full rounded-3xl object-cover lg:max-h-none max-h-96">
         </div>
     </Container>
-
-    <ByNumber/>
 </section>
