feat: updated footer icon header & edited cta

--- a/src/components/elements/Footer.astro
+++ b/src/components/elements/Footer.astro
@@ -108,18 +108,12 @@ const footerLegal = [
           </div>
       </div>
     <Container className="pb-8 relative overflow-hidden">
-        
         <span class="absolute top-1/2 left-1/2 -translate-y-1/2 -translate-x-1/2 blur-2xl opacity-20 w-24 h-16 sm:w-48 sm:h-36 rounded-full rotate-12 skew-x-6 bg-primary"></span>
         <div class="grid grid-cols-2 lg:grid-cols-3 lg:items-stretch gap-8 relative">
             <div class="col-span-2 lg:col-span-1 h-auto flex flex-col">
                 <div class="h-full">
                     <a href="#" class="relative flex items-center gap-3">
-                        <div class="relative w-7 h-7 overflow-hidden flex rounded-xl">
-                            <span class="absolute w-4 h-4 -top-1 -right-1 bg-green-500 rounded-md rotate-45"></span>
-                            <span class="absolute w-4 h-4 -bottom-1 -right-1 bg-[#FCDC58] rounded-md rotate-45"></span>
-                            <span class="absolute w-4 h-4 -bottom-1 -left-1 bg-primary rounded-md rotate-45"></span>
-                            <span class="absolute w-2 h-2 rounded-full bg-heading-1 top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2"></span>
-                        </div>
+                        <img src="../../../public/favicon.png" width="30px" height="30px" style="margin:10px">
                         <div class="inline-flex text-lg font-semibold text-heading-1">
                             Prosthetix
                         </div>
@@ -128,6 +122,6 @@ const footerLegal = [
                         We provide prosthetics to those who cannot afford them
                     </Paragraph>
                 </div>
-        </div>
+            </div>
     </Container>
 </footer>
