--- a/src/components/sections/CTA.astro
+++ b/src/components/sections/CTA.astro
@@ -54,8 +54,8 @@ import Paragraph from "../shared/Paragraph.astro";
               </svg>                                                                  
             </span>
             <input type="email" name="email" id="" placeholder="johndoe@gmail.com" class="w-full py-3 outline-none bg-transparent">
-            <Button variant={"primary"} className={"min-w-max text-white"}>
-              <span class="hidden sm:flex relative z-[5]">
+            <button type="submit" class="bg-primary hover:bg-primary-dark rounded-full px-6 py-3" id="submit-btn2">
+              <span class="text-white relative z-[5]">
                 Make A Change
               </span>
               <span class="flex sm:hidden relative z-[5]">
@@ -63,14 +63,14 @@ import Paragraph from "../shared/Paragraph.astro";
                   <path stroke-linecap="round" stroke-linejoin="round" d="M6 12L3.269 3.126A59.768 59.768 0 0121.485 12 59.77 59.77 0 013.27 20.876L5.999 12zm0 0h7.5" />
                 </svg>                                      
               </span>
-            </Button>
+            </button>
           </form>
         </div>
       </div>
     </div>
     <script>
       const form2 = document.getElementById('my-form2');
-      const submitBtn = document.getElementById('submit-btn');
+      const submitBtn2 = document.getElementById('submit-btn2');
     
       form2.addEventListener('submit', function (event) {
         event.preventDefault(); // Prevent the default form submission
