--- a/src/components/sections/CTA.astro
+++ b/src/components/sections/CTA.astro
@@ -44,7 +44,7 @@ import Paragraph from "../shared/Paragraph.astro";
           Want to <span class="text-transparent bg-clip-text bg-gradient-to-br from-indigo-600 from-20% via-primary via-30% to-green-600">support</span> us?
         </h1>
         <Paragraph className={"pt-10"}>
-          we accept donations which go towards distributing prosthetics
+          We accept donations which go towards distributing prosthetics.
         </Paragraph>
         <div class="mx-auto max-w-md sm:max-w-xl pt-10">
           <form action="https://formspree.io/f/xknlwelw" method="POST" id="my-form2" class="py-1 pl-6 w-full pr-1 flex gap-3 items-center text-heading-3 shadow-lg shadow-box-shadow border border-box-border bg-box-bg rounded-full ease-linear focus-within:bg-body focus-within:border-primary">
@@ -55,7 +55,7 @@ import Paragraph from "../shared/Paragraph.astro";
             </span>
             <input type="email" name="email" id="" placeholder="johndoe@gmail.com" class="w-full py-3 outline-none bg-transparent">
             <button type="submit" class="bg-primary hover:bg-primary-dark rounded-full px-6 py-3" id="submit-btn2">
-              <span class="text-white relative z-[5]">
+              <span class="hidden sm:flex relative z-[5]">
                 Make A Change
               </span>
               <span class="flex sm:hidden relative z-[5]">
