--- a/src/components/sections/Hero.astro
+++ b/src/components/sections/Hero.astro
@@ -26,7 +26,8 @@ import Container from "../shared/Container.astro";
                       </svg>                                                                  
                     </span>
                     <input type="email" name="email" id="" placeholder="johndoe@gmail.com" class="w-full py-3 outline-none bg-transparent">
-                    <button type="submit" class="bg-primary hover:bg-primary-dark rounded-full px-6 py-3" id="submit-btn">                      <span class="hidden sm:flex relative z-[5]">
+                    <button type="submit" class="bg-primary hover:bg-primary-dark rounded-full px-6 py-3" id="submit-btn">                      
+                      <span class="hidden sm:flex relative z-[5]">
                         Reach Out
                       </span>
                       <span class="flex sm:hidden relative z-[5]">
