fix: logo updated

--- a/src/components/elements/Footer.astro
+++ b/src/components/elements/Footer.astro
@@ -113,7 +113,7 @@ const footerLegal = [
             <div class="col-span-2 lg:col-span-1 h-auto flex flex-col">
                 <div class="h-full">
                     <a href="#" class="relative flex items-center gap-3">
-                        <img src="../../../public/favicon.png" width="30px" height="30px" style="margin:10px">
+                        <img src="/favicon.png" width="30px" height="30px" style="margin:10px">
                         <div class="inline-flex text-lg font-semibold text-heading-1">
                             Prosthetix
                         </div>
