--- a/src/components/elements/Navbar.astro
+++ b/src/components/elements/Navbar.astro
@@ -28,7 +28,7 @@ const navItems = [
         <nav class="w-full flex justify-between gap-6 relative">
             <!-- logo -->
             <div class="min-w-max inline-flex relative">
-                <img src="../../../public/favicon.png" width="30px" height="30px" style="margin:10px">
+                <img src="/favicon.png" width="30px" height="30px" style="margin:10px">
                 <a href="/" class="relative flex items-center gap-3">
                     <div class="inline-flex text-lg font-semibold text-heading-1">
                         Prosthetix
