--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -69,41 +69,46 @@ const { title } = Astro.props;
     }
   </script>
   <script>
-    const toggleMenu = document.querySelector(
-      "[data-toggle-nav]"
-    ) as HTMLButtonElement;
-    const navbar = document.querySelector("[data-navbar]") as HTMLDivElement;
-    const overlayNav = document.querySelector(
-      "[data-nav-overlay]"
-    ) as HTMLDivElement;
-    if (toggleMenu) {
-      toggleMenu.addEventListener("click", (e) => {
-        e.preventDefault();
-        if (toggleMenu.getAttribute("data-open-nav") === "false") {
-          toggleMenu.setAttribute("data-open-nav", "true");
-          overlayNav.setAttribute("data-is-visible", "true");
-          document.body.classList.add("!overflow-y-hidden");
-		  navbar.style.height = `${navbar.scrollHeight}px`
-
-        }else{
-			toggleMenu.setAttribute("data-open-nav", "false");
-        	overlayNav.setAttribute("data-is-visible", "false");
-        	document.body.classList.remove("!overflow-y-hidden");
-		  	navbar.style.height = "0px"
-		}
-		
-        
-      });
-
-      overlayNav.addEventListener("click", (e) => {
-        e.preventDefault();
+  const toggleMenu = document.querySelector("[data-toggle-nav]") as HTMLButtonElement;
+  const navbar = document.querySelector("[data-navbar]") as HTMLDivElement;
+  const overlayNav = document.querySelector("[data-nav-overlay]") as HTMLDivElement;
+  
+  if (toggleMenu) {
+    toggleMenu.addEventListener("click", (e) => {
+      e.preventDefault();
+      if (toggleMenu.getAttribute("data-open-nav") === "false") {
+        toggleMenu.setAttribute("data-open-nav", "true");
+        overlayNav.setAttribute("data-is-visible", "true");
+        document.body.classList.add("overflow-y-hidden");
+        navbar.style.height = `${navbar.scrollHeight}px`;
+      } else {
         toggleMenu.setAttribute("data-open-nav", "false");
-        	overlayNav.setAttribute("data-is-visible", "false");
-        	document.body.classList.remove("!overflow-y-hidden");
-		  	navbar.style.height = "0px"
+        overlayNav.setAttribute("data-is-visible", "false");
+        document.body.classList.remove("overflow-y-hidden");
+        navbar.style.height = "0px";
+      }
+    });
+  
+    overlayNav.addEventListener("click", (e) => {
+      e.preventDefault();
+      toggleMenu.setAttribute("data-open-nav", "false");
+      overlayNav.setAttribute("data-is-visible", "false");
+      document.body.classList.remove("overflow-y-hidden");
+      navbar.style.height = "0px";
+    });
+  
+    const navItems = navbar.querySelectorAll("li");
+  
+    navItems.forEach((item) => {
+      item.addEventListener("click", () => {
+        toggleMenu.setAttribute("data-open-nav", "false");
+        overlayNav.setAttribute("data-is-visible", "false");
+        document.body.classList.remove("overflow-y-hidden");
+        navbar.style.height = "0px";
       });
-    }
-  </script>
+    });
+  }  
+</script>
 </html>
 <style is:global>
   :root {
