--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -72,7 +72,7 @@ const { title } = Astro.props;
   const toggleMenu = document.querySelector("[data-toggle-nav]") as HTMLButtonElement;
   const navbar = document.querySelector("[data-navbar]") as HTMLDivElement;
   const overlayNav = document.querySelector("[data-nav-overlay]") as HTMLDivElement;
-  
+
   if (toggleMenu) {
     toggleMenu.addEventListener("click", (e) => {
       e.preventDefault();
@@ -88,7 +88,7 @@ const { title } = Astro.props;
         navbar.style.height = "0px";
       }
     });
-  
+
     overlayNav.addEventListener("click", (e) => {
       e.preventDefault();
       toggleMenu.setAttribute("data-open-nav", "false");
@@ -96,9 +96,9 @@ const { title } = Astro.props;
       document.body.classList.remove("overflow-y-hidden");
       navbar.style.height = "0px";
     });
-  
+
     const navItems = navbar.querySelectorAll("li");
-  
+
     navItems.forEach((item) => {
       item.addEventListener("click", () => {
         toggleMenu.setAttribute("data-open-nav", "false");
@@ -107,7 +107,18 @@ const { title } = Astro.props;
         navbar.style.height = "0px";
       });
     });
-  }  
+
+    const getStartedButton = document.querySelector("[data-get-started]") as HTMLButtonElement;
+
+    if (getStartedButton) {
+      getStartedButton.addEventListener("click", () => {
+        toggleMenu.setAttribute("data-open-nav", "false");
+        overlayNav.setAttribute("data-is-visible", "false");
+        document.body.classList.remove("overflow-y-hidden");
+        navbar.style.height = "0px";
+      });
+    }
+  }
 </script>
 </html>
 <style is:global>
