--- a/src/components/sections/Services.astro
+++ b/src/components/sections/Services.astro
@@ -14,21 +14,21 @@ import Title from "../shared/Title.astro";
             </Title>
         </div>
         <div class="grid sm:grid-cols-2 lg:grid-cols-3 gap-6 lg:gap-8">
-            <Service title="Design and Development" description="Focusing on creating new innovations for our prosthetic, using CAD and 3D design">
+            <Service title="Design and Development" description="Our engineers use Solidworks, the industry standard, to model and design our protheses.">
                 <span slot="icon">
                     <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
                         <path stroke-linecap="round" stroke-linejoin="round" d="M6 12L3.269 3.126A59.768 59.768 0 0121.485 12 59.77 59.77 0 013.27 20.876L5.999 12zm0 0h7.5" />
                     </svg> 
                 </span>
             </Service>
-            <Service title="Marketing and Outreach" description="Focusing on Social Media, reaching out to potential sponsors and finding ways to deliver our prosthetic">
+\            <Service title="Marketing and Outreach" description="Our outreach team focuses on spreading the influence of Prosthetix on social media.">
                 <span slot="icon">
                     <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
                         <path stroke-linecap="round" stroke-linejoin="round" d="M6 12L3.269 3.126A59.768 59.768 0 0121.485 12 59.77 59.77 0 013.27 20.876L5.999 12zm0 0h7.5" />
                     </svg> 
                 </span>
             </Service>
-            <Service title="Research" description="Focusing on looking into already published prosthetic decisions, condensing information, looking into our own potential publication">
+            <Service title="Research" description="Our research team provides information to our designers and programmers on the newest myoelectric prosthetic technology.">
                 <span slot="icon">
                     <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
                         <path stroke-linecap="round" stroke-linejoin="round" d="M6 12L3.269 3.126A59.768 59.768 0 0121.485 12 59.77 59.77 0 013.27 20.876L5.999 12zm0 0h7.5" />
