--- a/src/components/sections/Services.astro
+++ b/src/components/sections/Services.astro
@@ -21,7 +21,7 @@ import Title from "../shared/Title.astro";
                     </svg> 
                 </span>
             </Service>
-\            <Service title="Marketing and Outreach" description="Our outreach team spreads the mission of Prosthetix on social media.">
+            <Service title="Marketing and Outreach" description="Our outreach team spreads the mission of Prosthetix on social media.">
                 <span slot="icon">
                     <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
                         <path stroke-linecap="round" stroke-linejoin="round" d="M6 12L3.269 3.126A59.768 59.768 0 0121.485 12 59.77 59.77 0 013.27 20.876L5.999 12zm0 0h7.5" />
