--- a/src/components/elements/Navbar.astro
+++ b/src/components/elements/Navbar.astro
@@ -46,7 +46,7 @@ const navItems = [
                 </ul>
 
                 <div data-get-started class="lg:min-w-max flex items-center sm:w-max w-full pb-6 lg:pb-0 border-b border-box-bg lg:border-0 px-6 lg:px-0">
-                    <BtnLink text="Get Started" href="#cta" className="flex justify-center w-full sm:w-max" variant="primary"/>
+                    <BtnLink text="Donate" href="#cta" className="flex justify-center w-full sm:w-max" variant="primary"/>
                 </div>
             </div>
 
