--- a/src/components/sections/CTA.astro
+++ b/src/components/sections/CTA.astro
@@ -9,8 +9,33 @@ import Paragraph from "../shared/Paragraph.astro";
     <div
       class="w-full relative py-8 md:py-10 px-6 md:px-8 rounded-2xl bg-gradient-to-tr from-gray-100 to-gray-200 dark:from-gray-900"
     >
-      <!-- Background design elements (unchanged) -->
+      <div class="absolute right-0 top-0 h-full w-full flex justify-end">
+        <div class="w-28 h-28 overflow-hidden flex rounded-xl relative blur-2xl">
+            <span
+              class="absolute w-16 h-16 -top-1 -right-1 bg-green-500 rounded-md rotate-45"
+            ></span>
+            <span
+              class="absolute w-16 h-16 -bottom-1 -right-1 bg-[#FCDC58] rounded-md rotate-45"
+            ></span>
+            <span
+              class="absolute w-16 h-16 -bottom-1 -left-1 bg-primary rounded-md rotate-45"
+            ></span>
+          </div>
+      </div>
 
+      <div class="absolute left-0 bottom-0 h-full w-full flex items-end">
+        <div class="w-28 h-28 overflow-hidden flex rounded-xl relative blur-2xl">
+            <span
+              class="absolute w-16 h-16 -top-1 -right-1 bg-green-500 rounded-md rotate-45"
+            ></span>
+            <span
+              class="absolute w-16 h-16 -bottom-1 -right-1 bg-[#FCDC58] rounded-md rotate-45"
+            ></span>
+            <span
+              class="absolute w-16 h-16 -bottom-1 -left-1 bg-primary rounded-md rotate-45"
+            ></span>
+          </div>
+      </div>
       <div class="mx-auto text-center max-w-xl md:max-w-2xl relative">
         <h1
           class="text-3xl/tight sm:text-4xl/tight md:text-5xl/tight
@@ -22,25 +47,12 @@ import Paragraph from "../shared/Paragraph.astro";
           We accept donations which go towards distributing prosthetics.
         </Paragraph>
         <div class="mx-auto max-w-md sm:max-w-xl pt-10">
-          <!-- Your Button code here -->
-          <Button id="donate-button" variant={"primary"}>
+          <Button variant={"primary"}>
             <span class="text-white relative z-[5]">Donate Here</span>
           </Button>
         </div>
       </div>
     </div>
+  
   </Container>
 </section>
-
-<script>
-  // JavaScript function to handle the redirect
-  function redirectToWebsite() {
-    // Replace "https://www.example.com" with the URL of the website you want to redirect to
-    window.location.href = "https://www.buymeacoffee.com/prosthetix?new=1";
-  }
-
-  const donateButton = document.getElementById("donate-button");
-  donateButton.addEventListener("click", redirectToWebsite);
-</script>
-</body>
-</html>
