about us unshittified

--- a/src/components/sections/AboutUs.astro
+++ b/src/components/sections/AboutUs.astro
@@ -24,10 +24,9 @@ import Title from "../shared/Title.astro";
                 Our Mission
             </Title>
             <Paragraph className="mt-8">
-                Help those who require prosthetics but cannot afford them.
-                Inspired to supply lower-cost prosthetic limbs to those impacted by the earthquakes in Turkey and Syria <br><br>
-                Objective : to find the point where an arm that is comparable to an actual limb may be produced for less money than currently accessible options.
-                To decrease the stigmas and allow youth to participate in these crucial life-changing aspects of technology
+                At Prosthetix, our mission is to empower amputees affected by conflict or disaster through affordable and efficient prosthetic solutions. 
+                Through relentless research, innovation, and collaboration, we provide cutting-edge technology that fosters independence and dignity. <br><br>
+                Together with our partners, we are committed to transforming lives and ensuring accessibility to life-changing prostheses, creating a brighter future for those in need.
             </Paragraph>
 
         </div>
