vision statement > our mission

--- a/src/components/sections/AboutUs.astro
+++ b/src/components/sections/AboutUs.astro
@@ -21,7 +21,7 @@ import Title from "../shared/Title.astro";
         </div>
         <div class="flex-1 flex midmd:w-7/12 lg:w-1/2 flex-col">
             <Title>
-                Our Mission
+                Vision Statement
             </Title>
             <Paragraph className="mt-8">
                 At Prosthetix, our mission is to empower amputees affected by conflict or disaster through affordable and efficient prosthetic solutions. 
