--- a/src/components/sections/Features.astro
+++ b/src/components/sections/Features.astro
@@ -10,20 +10,20 @@ import Title from "../shared/Title.astro";
         
         <div class="flex-1 flex midmd:w-7/12 lg:w-1/2 flex-col">
             <Title>
-                What we are working on
+                Organizational Objectives
             </Title>
             <ul class="mt-8 space-y-4 text-heading-3 font-medium">
                 <li>
-                    <span class="font-bold bg-box-bg rounded-full w-8 h-8 mr-3 text-primary inline-flex justify-center items-center">&checkmark;</span>  A potential Myoelectric Design 
+                    <span class="font-bold bg-box-bg rounded-full w-8 h-8 mr-3 text-primary inline-flex justify-center items-center">&checkmark;</span>  Developing and Providing Affordable Prosthetic Solutions: Create cost-effective and accessible prosthetic devices that do not compromise on quality, ensuring affordability for individuals affected by conflict or disaster. 
                 </li>
                 <li>
-                    <span class="font-bold bg-box-bg rounded-full w-8 h-8 mr-3 text-primary inline-flex justify-center items-center">&checkmark;</span>  Starting with a hand and potentially moving to a leg prosthetic
+                    <span class="font-bold bg-box-bg rounded-full w-8 h-8 mr-3 text-primary inline-flex justify-center items-center">&checkmark;</span>  Foster Research and Innovation: Invest in continuous research and development to pioneer new and improved prosthetic designs that address the unique challenges faced by amputees in conflict or disaster-affected regions.
                 </li>
                 <li>
-                    <span class="font-bold bg-box-bg rounded-full w-8 h-8 mr-3 text-primary inline-flex justify-center items-center">&checkmark;</span> Helping Syrian Earthquake Refugees in need of prosthetics, or in general the people around the world in need of a prosthetic
+                    <span class="font-bold bg-box-bg rounded-full w-8 h-8 mr-3 text-primary inline-flex justify-center items-center">&checkmark;</span> Promote Human-Centric Design: Collaborate with prosthetists, rehabilitation specialists, and amputees to design prosthetic solutions that are comfortable, adaptable, and tailored to the specific needs and preferences of the users.
                 </li>
                 <li>
-                    <span class="font-bold bg-box-bg rounded-full w-8 h-8 mr-3 text-primary inline-flex justify-center items-center">&checkmark;</span> The use of increased technology such as Arduino and Pico in our prosthetics
+                    <span class="font-bold bg-box-bg rounded-full w-8 h-8 mr-3 text-primary inline-flex justify-center items-center">&checkmark;</span> Facilitate Training and Education: Establish training programs for local healthcare professionals and amputees to build capacity within affected communities, ensuring proper fitting, maintenance, and effective use of prosthetic devices.
                 </li>
             </ul>
         </div>
