--- a/src/components/sections/CTA.astro
+++ b/src/components/sections/CTA.astro
@@ -44,7 +44,7 @@ import Paragraph from "../shared/Paragraph.astro";
           Want to <span class="text-transparent bg-clip-text bg-gradient-to-br from-indigo-600 from-20% via-primary via-30% to-green-600">support</span> us?
         </h1>
         <Paragraph className={"pt-10"}>
-          We accept donations which go towards distributing prosthetics.
+          100% of all donations go right back to funding the research and development of our prostheses!
         </Paragraph>
         <div class="mx-auto max-w-md sm:max-w-xl pt-10">
           <Button variant={"primary"}>
