--- a/src/components/elements/Navbar.astro
+++ b/src/components/elements/Navbar.astro
@@ -14,11 +14,11 @@ const navItems = [
     },
     {
         href:"#about-us",
-        text:"Mission"
+        text:"Vision"
     },
     {
         href:"#features",
-        text:"Impact"
+        text:"Goals"
     },
 ]
 ---
